Details
-
Bug
-
Status: Resolved
-
Trivial
-
Resolution: Fixed
-
None
Description
While working on the Rust implementation, I got confused by this comment that said dictionary index types could be assumed to be signed integers. The Rust code allowed for unsigned integers, so I thought the Rust code had a bug. However, I read the C++ code more carefully, and unsigned integers are allowed as dictionary index types-- this was changed in this commit but the comment wasn't updated.
I have a pull request fixing the comment, just want to save someone a few minutes of confusion
Attachments
Issue Links
- links to