ARROW-10397: [C++] Update comment to match change made in b1a7a73ff2

Dictionaries can be indexed by either signed or unsigned integers.

Closes #8535 from carols10cents/update-cpp-comment

Authored-by: Carol (Nichols || Goulding) <carol.nichols@gmail.com>
Signed-off-by: Micah Kornfield <emkornfield@gmail.com>